<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_valor1"
        android:id="@+id/textView"
        android:background="#ffffcc16"
        android:textColor="#ff000000"
        android:layout_weight="0.04" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="15"
        android:id="@+id/edtValor1"
        android:textColor="#ff000000"
        android:padding="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_valor2"
        android:id="@+id/textView2"
        android:background="#ffffcc16"
        android:textColor="#ff000000"
        android:layout_weight="0.04" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="15"
        android:id="@+id/edtValor2"
        android:textColor="#ff000000"
        android:padding="15dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_somar"
        android:id="@+id/btnSomar"
        android:onClick="somar"
        android:background="#ffccff25"
        android:textColor="#ff000000"
        android:textSize="14px"
        android:textStyle="bold|italic"
        android:layout_weight="0.25"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_subtrair"
        android:id="@+id/btnSub"
        android:onClick="subtrair"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25"
        android:background="#ffccff25"
        android:textColor="#ff000000"
        android:textSize="14px"
        android:textStyle="bold|italic"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_dividir"
        android:id="@+id/btnDiv"
        android:onClick="dividir"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25"
        android:background="#ffccff25"
        android:textColor="#ff000000"
        android:textSize="14px"
        android:textStyle="bold|italic"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_multi"
        android:id="@+id/btnMult"
        android:onClick="multiplicar"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25"
        android:background="#ffccff25"
        android:textColor="#ff000000"
        android:textSize="14px"
        android:textStyle="bold|italic"
        android:layout_marginTop="5dp" />
</LinearLayout>
